--- a/BaseUcdArchProject.Web/Web.config
+++ b/BaseUcdArchProject.Web/Web.config
@@ -5,10 +5,24 @@
   -->
 
 <configuration>
+  <configSections>
+		<section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+	</configSections>
+	<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+		<session-factory>
+			<property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
+			<property name="proxyfactory.factory_class">NHibernate.ByteCode.Spring.ProxyFactoryFactory, NHibernate.ByteCode.Spring</property>
+			<property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+			<property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
+			<property name="connection.connection_string_name">MainDB</property>
+			<property name="default_schema">Northwind.dbo</property>
+			<property name="generate_statistics">true</property>
+			<property name="adonet.batch_size">25</property>
+		</session-factory>
+	</hibernate-configuration>
+    
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=Northwind;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
